Update game.css Add z-index to dice to prevent overlap

--- a/class/game.css
+++ b/class/game.css
@@ -224,6 +224,8 @@ body {
     width: 80px; 
     height: 80px; 
     perspective: 1000px; 
+    position: relative;
+    z-index: 10;
 }
 
 .dice-inner { 
